--- a/composer.json
+++ b/composer.json
@@ -200,7 +200,6 @@
     {
       "type": "package",
       "package": {
-<<<<<<< HEAD
         "name": "koodimonni-plugin-language/contact-form-7-ja",
         "type": "wordpress-language",
         "version": "5.1.7",
@@ -208,14 +207,18 @@
           "type": "zip",
           "url": "https://downloads.wordpress.org/translation/plugin/contact-form-7/{%version}/ja.zip",
           "reference": "master"
-=======
+        }
+      }
+    },
+    {
+      "type": "package",
+      "package": {
         "name": "koodimonni-plugin-language/wp-fastest-cache-ja",
         "type": "wordpress-language",
         "version": "0.9.0.5",
         "dist": {
           "type": "zip",
           "url": "https://downloads.wordpress.org/translation/plugin/wp-fastest-cache/{%version}/ja.zip"
->>>>>>> upstream/master
         }
       }
     }
